# rain.strategies

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  registry  registry-copy  settings.json  settings.yaml
.github/workflows/: rainix-rs.yaml  rainix.yaml
crates/rain_orderbook_bindings/: Cargo.toml
crates/raindex_bindings/: Cargo.toml
ports/: auction-dca.rain  canary.rain  dynamic-spread.rain  fixed-limit.rain  grid.rain  registry
src/: auction-dca.md  auction-dca.rain  canary.rain  claims.rain  claims2.rain  dia-fixed-spread.rain  dynamic-spread.rain  fixed-limit.rain  fixed-spread.md  fixed-spread.rain  folio.md  folio.rain  grid.md  grid.rain  npv-dca-precompute.md  npv-dca-precompute.rain  npv-dca.md  npv-dca.rain  oracle-limit.md  oracle-limit.rain  st0x-fixed-spread.rain  wrappedtokenrate.rain
strategies/: test-dynamic-spread.rain  test-strategy-scenario-update.rain  test-strategy-token-select.rain  test-strategy.rain
strategies/dev/: backupregistry  dca-markdown.md  demo-markdown.md  fixed-limit.md  grid-markdown.md  registry  registry.json  simple-markdown.md  test-strategy-token-select.rain  test-strategy.rain
strategies/unstable/: foo.rain
tests/: rpc.rs
token-lists/: flare.json
