[package]
name = "rain-strategies-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
glob = "0.3"
rain_orderbook_app_settings = { git = "https://github.com/rainlanguage/rain.orderbook" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
